# model-failure-lab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v4.4-MILESTONE-AUDIT.md  v4.5-MILESTONE-AUDIT.md  v4.6-MILESTONE-AUDIT.md  v4.7-MILESTONE-AUDIT.md  v4.8-MILESTONE-AUDIT.md  v4.9-MILESTONE-AUDIT.md  v5.0-MILESTONE-AUDIT.md  v5.1-MILESTONE-AUDIT.md  v5.2-MILESTONE-AUDIT.md  v5.3-MILESTONE-AUDIT.md
.planning/milestones/: v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v4.4-REQUIREMENTS.md  v4.5-ROADMAP.md  v4.6-ROADMAP.md  v4.7-REQUIREMENTS.md  v4.7-ROADMAP.md  v4.8-REQUIREMENTS.md  v4.8-ROADMAP.md  v4.9-REQUIREMENTS.md  v4.9-ROADMAP.md  v5.0-REQUIREMENTS.md  v5.0-ROADMAP.md  v5.1-REQUIREMENTS.md  v5.1-ROADMAP.md  v5.2-REQUIREMENTS.md  v5.2-ROADMAP.md  v5.3-REQUIREMENTS.md  v5.3-ROADMAP.md
.planning/reports/: MILESTONE_SUMMARY-v4.6.md
configs/: README.md
configs/data/: civilcomments.yaml
configs/eval/: default.yaml
configs/experiments/: civilcomments_distilbert_baseline.yaml  civilcomments_distilbert_baseline_constrained.yaml  civilcomments_distilbert_calibrated.yaml  civilcomments_distilbert_group_balanced_sampling.yaml  civilcomments_distilbert_group_dro.yaml  civilcomments_distilbert_reweighting.yaml  civilcomments_distilbert_temperature_scaling.yaml  civilcomments_logistic_baseline.yaml  civilcomments_perturbation_stress.yaml
configs/model/: distilbert.yaml  distilbert_constrained.yaml  logistic_tfidf.yaml
configs/train/: default.yaml  distilbert_constrained.yaml
docs/: adapter-extension-guide.md  architecture.md  artifact-model.md  ci-governance.md  cloud-gpu-run.md  code-map.md  fixture-workspace.md  future-ideas.md  getting-started-operator.md  harvest-replay.md  legacy.md  product-screens.md  release-and-pypi.md  runtime-setup.md  troubleshooting.md  ui_parity.md  v1_1_findings.md  v1_1_reproducibility.md  v1_3_findings.md  v1_4_closeout.md
docs/screens/: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/scripts/: smoke-real-artifacts.mjs
frontend/src/: main.tsx
scripts/: __init__.py  _bootstrap.py  build_artifact_index.py  build_final_gate.py  build_perturbation_report.py  build_report.py  build_robustness_report.py  build_stability_report.py  check_environment.py  check_phase17_seed_cohorts.py  download_data.py  finalize_phase17_distilbert_runs.sh  generate_insight_fixture.py  query_bridge.py  run_baseline.py  run_mitigation.py  run_perturbation_eval.py  run_phase17_distilbert_seeds.sh  run_react_ui.py  run_results_ui.py  run_shift_eval.py  smoke_package_install.py  sync_react_ui_manifest.py  validate_artifact_index.py
src/model_failure_lab/: __init__.py  cli.py  clusters.py  history.py
tests/: conftest.py
tests/unit/: __init__.py  test_analysis_summarizer.py  test_artifact_index_contract.py  test_artifact_index_validation.py  test_artifact_query_index.py  test_bundled_datasets.py  test_canonical_data_contract.py  test_cli.py  test_cli_clusters.py  test_cli_demo_compare.py  test_cli_governance.py  test_cli_insights.py  test_cli_production_smoke.py  test_config_loader.py  test_data_materialization_contract.py  test_dataset_evolution.py  test_distilbert_baseline_pipeline.py  test_evaluation_aggregate_metrics.py  test_evaluation_calibration.py  test_failure_analysis_schemas.py  test_failure_analysis_storage.py  test_failure_classifiers.py  test_failure_clusters.py  test_failure_datasets.py  test_failure_reporting_comparison.py  test_failure_reporting_core.py  test_failure_runner_contracts.py  test_failure_runner_execution.py  test_final_gate_reporting.py  test_harvest_pipeline.py  test_harvest_replay_loop.py  (+30 more)
(+545 files in other folders)
