[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-failure-lab"
version = "0.1.0"
description = "Reproducible experiment scaffold for distribution-shift failure analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML",
]

[project.optional-dependencies]
anthropic = [
  "anthropic",
]
dev = [
  "pytest",
  "ruff",
]
legacy = [
  "matplotlib",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "torch",
  "transformers",
  "wilds",
]
openai = [
  "openai>=1.0.0",
]
ui = [
  "streamlit",
]

[project.scripts]
failure-lab = "model_failure_lab.cli:main"
model-failure-lab = "model_failure_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
model_failure_lab = ["datasets/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
